new feature list

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <title id="icon-user-plus-title"></title>
       <desc id="icon-user-plus-desc"></desc>
       <path d="M12 23c0-4.726 2.996-8.765 7.189-10.319 0.509-1.142 0.811-2.411 0.811-3.681 0-4.971 0-9-6-9s-6 4.029-6 9c0 3.096 1.797 6.191 4 7.432v1.649c-6.784 0.555-12 3.888-12 7.918h12.416c-0.271-0.954-0.416-1.96-0.416-3z"></path>
-      <path fill="#333" d="M23 14c-4.971 0-9 4.029-9 9s4.029 9 9 9c4.971 0 9-4.029 9-9s-4.029-9-9-9zM28 24h-4v4h-2v-4h-4v-2h4v-4h2v4h4v2z"></path>
+      <path d="M23 14c-4.971 0-9 4.029-9 9s4.029 9 9 9c4.971 0 9-4.029 9-9s-4.029-9-9-9zM28 24h-4v4h-2v-4h-4v-2h4v-4h2v4h4v2z"></path>
       </symbol>
 
       <!-- color mode -->
@@ -98,8 +98,8 @@
       <title id="icon-cart-title"></title>
       <desc id="icon-cart-desc"></desc>
       <path d="M12 29c0 1.657-1.343 3-3 3s-3-1.343-3-3c0-1.657 1.343-3 3-3s3 1.343 3 3z"></path>
-      <path fill="#333" d="M32 29c0 1.657-1.343 3-3 3s-3-1.343-3-3c0-1.657 1.343-3 3-3s3 1.343 3 3z"></path>
-      <path fill="#333" d="M32 16v-12h-24c0-1.105-0.895-2-2-2h-6v2h4l1.502 12.877c-0.915 0.733-1.502 1.859-1.502 3.123 0 2.209 1.791 4 4 4h24v-2h-24c-1.105 0-2-0.895-2-2 0-0.007 0-0.014 0-0.020l26-3.98z"></path>
+      <path d="M32 29c0 1.657-1.343 3-3 3s-3-1.343-3-3c0-1.657 1.343-3 3-3s3 1.343 3 3z"></path>
+      <path d="M32 16v-12h-24c0-1.105-0.895-2-2-2h-6v2h4l1.502 12.877c-0.915 0.733-1.502 1.859-1.502 3.123 0 2.209 1.791 4 4 4h24v-2h-24c-1.105 0-2-0.895-2-2 0-0.007 0-0.014 0-0.020l26-3.98z"></path>
       </symbol>
 
       <symbol id="icon-credit-card" viewBox="0 0 32 32" aria-labelledby="icon-credit-card-title icon-credit-card-desc">
@@ -112,17 +112,17 @@
       <title id="icon-address-book-title"></title>
       <desc id="icon-address-book-desc"></desc>
       <path d="M6 0v32h24v-32h-24zM18 8.010c2.203 0 3.99 1.786 3.99 3.99s-1.786 3.99-3.99 3.99-3.99-1.786-3.99-3.99 1.786-3.99 3.99-3.99v0zM24 24h-12v-2c0-2.209 1.791-4 4-4v0h4c2.209 0 4 1.791 4 4v2z"></path>
-      <path fill="#333" d="M2 2h3v6h-3v-6z"></path>
-      <path fill="#333" d="M2 10h3v6h-3v-6z"></path>
-      <path fill="#333" d="M2 18h3v6h-3v-6z"></path>
-      <path fill="#333" d="M2 26h3v6h-3v-6z"></path>
+      <path d="M2 2h3v6h-3v-6z"></path>
+      <path d="M2 10h3v6h-3v-6z"></path>
+      <path d="M2 18h3v6h-3v-6z"></path>
+      <path d="M2 26h3v6h-3v-6z"></path>
       </symbol>
 
       <symbol id="icon-alarm" viewBox="0 0 32 32" aria-labelledby="icon-alarm-title icon-alarm-desc">
       <title id="icon-alarm-title"></title>
       <desc id="icon-alarm-desc"></desc>
       <path d="M16 4c-7.732 0-14 6.268-14 14s6.268 14 14 14 14-6.268 14-14-6.268-14-14-14zM16 29.25c-6.213 0-11.25-5.037-11.25-11.25s5.037-11.25 11.25-11.25c6.213 0 11.25 5.037 11.25 11.25s-5.037 11.25-11.25 11.25zM29.212 8.974c0.501-0.877 0.788-1.892 0.788-2.974 0-3.314-2.686-6-6-6-1.932 0-3.65 0.913-4.747 2.331 4.121 0.851 7.663 3.287 9.96 6.643v0zM12.748 2.331c-1.097-1.418-2.816-2.331-4.748-2.331-3.314 0-6 2.686-6 6 0 1.082 0.287 2.098 0.788 2.974 2.297-3.356 5.838-5.792 9.96-6.643z"></path>
-      <path fill="#333" d="M16 18v-8h-2v10h8v-2z"></path>
+      <path d="M16 18v-8h-2v10h8v-2z"></path>
       </symbol>
 
       <symbol id="icon-user" viewBox="0 0 32 32" aria-labelledby="icon-user-title icon-user-desc">
@@ -171,8 +171,8 @@
       <title id="icon-info-title"></title>
       <desc id="icon-info-desc"></desc>
       <path d="M14 9.5c0-0.825 0.675-1.5 1.5-1.5h1c0.825 0 1.5 0.675 1.5 1.5v1c0 0.825-0.675 1.5-1.5 1.5h-1c-0.825 0-1.5-0.675-1.5-1.5v-1z"></path>
-      <path fill="#333" d="M20 24h-8v-2h2v-6h-2v-2h6v8h2z"></path>
-      <path fill="#333" d="M16 0c-8.837 0-16 7.163-16 16s7.163 16 16 16 16-7.163 16-16-7.163-16-16-16zM16 29c-7.18 0-13-5.82-13-13s5.82-13 13-13 13 5.82 13 13-5.82 13-13 13z"></path>
+      <path d="M20 24h-8v-2h2v-6h-2v-2h6v8h2z"></path>
+      <path d="M16 0c-8.837 0-16 7.163-16 16s7.163 16 16 16 16-7.163 16-16-7.163-16-16-16zM16 29c-7.18 0-13-5.82-13-13s5.82-13 13-13 13 5.82 13 13-5.82 13-13 13z"></path>
       </symbol>
 
       <symbol id="icon-cancel-circle" viewBox="0 0 32 32" aria-labelledby="icon-cancel-circle-title icon-cancel-circle-desc">
@@ -198,7 +198,7 @@
       <title id="icon-circle-right-title"></title>
       <desc id="icon-circle-right-desc"></desc>
       <path d="M16 0c-8.837 0-16 7.163-16 16s7.163 16 16 16 16-7.163 16-16-7.163-16-16-16zM16 29c-7.18 0-13-5.82-13-13s5.82-13 13-13 13 5.82 13 13-5.82 13-13 13z"></path>
-      <path fill="#333" d="M11.086 22.086l2.829 2.829 8.914-8.914-8.914-8.914-2.828 2.828 6.086 6.086z"></path>
+      <path d="M11.086 22.086l2.829 2.829 8.914-8.914-8.914-8.914-2.828 2.828 6.086 6.086z"></path>
       </symbol>
 
       <symbol id="icon-checkbox-checked" viewBox="0 0 32 32" aria-labelledby="icon-checkbox-checked-title icon-checkbox-checked-desc">
@@ -489,9 +489,9 @@
                       <div class="profile-menu-header">Signed in as <strong class="block text-md">ethayer594 <a class="c-blue" href="profile.html"><svg class="icon"><use xlink:href="#icon-cog" /></svg></a></strong></div>
                     </div>
                     <hr>
-                    <div class="profile-menu-items">
-                      <a class="dropdown-item" href="notifications.html"><svg class="icon"><use xlink:href="#icon-alarm" /></svg> Notifications</a>
-                      <a class="dropdown-item" href="dashboard.html"><svg class="icon"><use xlink:href="#icon-meter" /></svg> Dashboard</a>
+                    <div class="profile-menu-items">                      
+                      <a class="dropdown-item" href="dashboard.html"><svg class="icon"><use xlink:href="#icon-equalizer" /></svg> Dashboard</a>
+                      <a class="dropdown-item" href="notifications.html"><svg class="icon"><use xlink:href="#icon-mail" /></svg> Notifications</a>
                       <a class="dropdown-item" href="offers.html"><svg class="icon"><use xlink:href="#icon-gift" /></svg> Offers</a>
                       <a class="dropdown-item" href="offers.html"><svg class="icon"><use xlink:href="#icon-star" /></svg> Upgrade</a>
                     </div>
@@ -601,74 +601,45 @@
       </section>
 
       <!-- Features (home) -->
-      <section class="banner features">
+      <section class="banner features bg-grey-EEE">
         <div class="container pt-4 pr-pl-4 pb-0">
           <h2 class="align-center mb-3 pt-2 h4">MaxCentive Features</h2>
           <!-- feature items -->
-          <div class="grid-wrap" hidden>
-            <!-- feature -->
-            <div class="feature">
-              <div class="card theme-rust">
-                <!-- media item -->
-                <figure class="media-item lazyload">                  
-                  <picture>            
-                    <img src="images/content/img-content-security-dashboard-wide.jpg" data-src="images/content/img-content-security-dashboard-wide.jpg" class="lazyload" alt="Dashboard user interface example.">
-                    <noscript>
-                      <img src="images/content/img-content-security-dashboard-wide.jpg" alt="Dashboard user interface example.">
-                    </noscript>
-                  </picture>
-                </figure>
-                <!-- copy -->
-                <div class="card-block">
-                  <h4 class="card-title">Commissions</h4>
-                  <p class="card-text">MaxCentive enables its Customers to not only build complex plans but also track their performance in real-time and based on data insights that will help achieve best results.</p>
-                  <a href="#" class="btn btn-round btn-outline">Read More</a>
-                </div>
-              </div>
-            </div>
-            <!-- feature -->
-            <div class="feature">
-              <div class="card theme-teal">
-                <!-- media item -->
-                <figure class="media-item lazyload">
-                  <picture>            
-                    <img src="images/content/img-content-bigdata-analysis-03-wide.jpg" data-src="images/content/img-content-bigdata-analysis-03-wide.jpg" class="lazyload" alt="Illustration of testing data process.">
-                    <noscript>
-                      <img src="images/content/img-content-bigdata-analysis-03-wide.jpg" alt="Illustration of testing data process.">
-                    </noscript>
-                  </picture>
-                </figure>
-                <!-- copy -->
-                <div class="card-block">
-                  <h4 class="card-title">Payments</h4>
-                  <p class="card-text">At a high-level, MaxCentive is a SaaS application that is designed to address the Commissions, Incentives, Payments, Loyalty and Analytics needs of any business in the simplest manner possible.</p>
-                  <a href="#" class="btn btn-round btn-outline">Read More</a>
-                </div>
-              </div>
-            </div>
-            <!-- feature -->
-            <div class="feature">
-              <div class="card theme-blue-rich">
-                <!-- media item -->
-                <figure class="media-item lazyload">
-                  <picture>            
-                    <img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="Illustration of testing data process.">
-                    <noscript>
-                      <img src="images/content/img-content-testing-wide.jpg" alt="Illustration of testing data process.">
-                    </noscript>
-                  </picture>
-                </figure>
-                <!-- copy -->
-                <div class="card-block">
-                  <h4 class="card-title">Loyalty</h4>
-                  <p class="card-text">MaxCentive is a completely integrated and white-label payments hub based on blockchain technology for financial institutions and enterprise customers.</p>
-                  <a href="#" class="btn btn-round btn-outline">Read More</a>
-                </div>
-              </div>
-            </div>
+          <div class="feature-list">
+            <!-- feature image -->
+            <figure class="feature-img">
+
+            </figure>
+            <!-- feature list -->
+            <ul class="list-unstyled feature-items">
+              <li>
+                <svg class="icon c-green mr-ml-0 mb-1 text-xl"><use xlink:href="#icon-tree" /></svg>
+                <h3 class="feature-title">Feature Title</h3>
+                <p class="feature-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolorem, optio reprehenderit sapiente aliquid, voluptatibus rerum dolore esse quas dolor delectus eos debitis corrupti ab.</p>
+                <a href="#0" class="btn btn-text">Learn More</a>
+              </li>
+              <li>
+                <svg class="icon c-blue mr-ml-0 mb-1 text-xl"><use xlink:href="#icon-stats-bars" /></svg>
+                <h3 class="feature-title">Feature Title</h3>
+                <p class="feature-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolorem, optio reprehenderit sapiente aliquid, voluptatibus rerum dolore esse quas dolor delectus eos debitis corrupti ab.</p>
+                <a href="#0" class="btn btn-text">Learn More</a>
+              </li>
+              <li>
+                <svg class="icon c-orange mr-ml-0 mb-1 text-xl"><use xlink:href="#icon-location" /></svg>
+                <h3 class="feature-title">Feature Title</h3>
+                <p class="feature-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolorem, optio reprehenderit sapiente aliquid, voluptatibus rerum dolore esse quas dolor delectus eos debitis corrupti ab.</p>
+                <a href="#0" class="btn btn-text">Learn More</a>
+              </li>
+              <li>
+                <svg class="icon c-purple mr-ml-0 mb-1 text-xl"><use xlink:href="#icon-meter" /></svg>
+                <h3 class="feature-title">Feature Title</h3>
+                <p class="feature-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolorem, optio reprehenderit sapiente aliquid, voluptatibus rerum dolore esse quas dolor delectus eos debitis corrupti ab.</p>
+                <a href="#0" class="btn btn-text">Learn More</a>
+              </li>
+            </ul>
           </div>
           <!-- media item (full) -->
-          <figure class="media-item dash-sample-wide mb-0 pt-2 w-100 lazyload">
+          <figure class="media-item dash-sample mb-0 pt-2 w-100 lazyload">
             <figcaption>A dashboard interface example of our amazing app.</figcaption>
             <picture>
               <source media="(min-width: 40em)" srcset="images/content/img-content-app-03-wide-LG.png" class="lazyload" alt="Examples of MaxCentive CRM interface.">
