--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
       <!-- Features (home) -->
       <section class="banner features bg-grey-EEE">
         <div class="container pt-4 pr-pl-4 pb-0">
-          <h2 class="align-center mb-3 pt-2 h4">MaxCentive Features</h2>
+          <h2 class="align-center mb-4 pt-2">MaxCentive Features</h2>
           <!-- feature items -->
           <div class="feature-list">
             <!-- feature image -->
