--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
           </div>
           <!-- media item (full) -->
           <figure class="media-item dash-sample mb-0 pt-2 w-100 lazyload">
-            <figcaption>A dashboard interface example of our amazing app.</figcaption>
+            <figcaption>A dashboard interface example of our amazing app</figcaption>
             <picture>
               <source media="(min-width: 40em)" srcset="images/content/img-content-app-03-wide-LG.png" class="lazyload" alt="Examples of MaxCentive CRM interface.">
               <img src="images/content/img-content-app-01-wide-LG.png" data-src="images/content/img-content-app-01-wide-LG.png" class="lazyload"
