theme color setup, removed extra css under products, content setup

--- a/MASTER.html
+++ b/MASTER.html
@@ -417,7 +417,7 @@
       </svg>
   </noscript>
 
-    <header class="site-header fixed-top">
+    <header class="site-header">
       <nav class="navbar navbar-inverse navbar-toggleable-md main-menu" role="navigation">
         <div class="container">
           <!-- logo -->
