--- a/contact.html
+++ b/contact.html
@@ -419,7 +419,7 @@
 
   <div class="site-wrapper">
 
-    <header class="site-header fixed-top">
+    <header class="site-header">
       <nav class="navbar navbar-inverse navbar-toggleable-md main-menu" role="navigation">
         <div class="container">
           <!-- logo -->
