--- a/integration.html
+++ b/integration.html
@@ -416,7 +416,7 @@
       </svg>
   </noscript>
 
-    <header class="site-header fixed-top">
+    <header class="site-header">
       <nav class="navbar navbar-inverse navbar-toggleable-md main-menu" role="navigation">
         <div class="container">
           <!-- logo -->
