--- a/products/wmsb/index.html
+++ b/products/wmsb/index.html
@@ -536,7 +536,7 @@
       <section class="banner banner-full theme-dark-green">
         <div class="container">
           <!-- banner -->
-          <div class="card post-list card-row card-row-rev card-clean">
+          <div class="card card-row card-row-rev card-clean">
             <figure class="media-item mb-0 lazyload">
               <picture>
                 <source media="(min-width: 40em)" data-srcset="../../images/content/img-content-integration-team.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
