--- a/products/wmsb/index.html
+++ b/products/wmsb/index.html
@@ -509,99 +509,61 @@
         </div>
       </section>
 
-      <!-- CTA banner -->
-      <section id="page-start" class="banner banner-full">
-        <div class="container">
-          <!-- banner -->
-          <div class="card card-row card-clean">
-            <figure class="media-item mb-0 lazyload">
-              <picture>
-                <source media="(min-width: 40em)" data-srcset="../../images/content/img-content-subscription-services.jpg" class="lazyload" alt="Group of application interfaces.">              
-                <img src="../../images/content/img-content-subscription-services-wide.jpg" data-src="../../images/content/img-content-subscription-services-wide.jpg" class="lazyload" alt="Group of application interfaces.">
-                <noscript>
-                  <img src="../../images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
-                </noscript>
-              </picture>
-            </figure>
-            <div class="card-block">
-              <h2 id="subscription-services" class="card-title">Subscription Services</h2>
-              <p class="card-text">The hosted Software-as-a-Service (SaaS) model also allows service providers to become more agile with the ability to quickly create, bundle and implement new offerings with minimal CapEx investments.</p>
-              <a href="../../subscription-services.html" class="btn btn-lg btn-text">Find out how <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
-            </div>
-          </div>
-        </div>
-      </section>
-  
-      <!-- CTA banner -->
-      <section class="banner banner-full theme-dark-green">
-        <div class="container">
-          <!-- banner -->
-          <div class="card card-row card-row-rev card-clean">
-            <figure class="media-item mb-0 lazyload">
-              <picture>
-                <source media="(min-width: 40em)" data-srcset="../../images/content/img-content-integration-team.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
-                <img data-src="../../images/content/img-content-integration-team-wide.jpg" class="lazyload" alt="Integration Team sitting in the office.">
-                <noscript>
-                  <img src="../../images/content/img-content-integration-team-1x1.jpg" alt="Integration Team sitting in the office.">
-                </noscript>
-              </picture>
-            </figure>
-            <div class="card-block bg-half-globe-left">
-              <h2 id="integration-services" class="card-title">Integration Services</h2>
-              <p class="card-text">Our team has deep understanding and capability in designing solutions ground up to take advantage of cloud’s extreme elasticity and physical availability across multiple geographies.</p>
-              <a href="#" class="btn btn-lg btn-text">Meet the team <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
-            </div>
-          </div>
-        </div>
-      </section>
-
       <!-- Features (home) -->
       <section class="banner features bg-grey-EEE">
         <div class="container pt-4 pr-pl-4 pb-0">
           <h2 class="align-center mb-4 pt-2">Key Features</h2>
           <!-- feature items -->
           <div class="feature-list">
-            <!-- feature image -->
-            <figure class="feature-img">
-
-            </figure>
             <!-- feature list -->
-            <ul class="list-unstyled feature-items">
+            <ul class="list-unstyled feature-items mr-ml-a mw-65em">
               <li>
-                <svg class="icon c-green mr-ml-0 mb-1 text-xl"><use xlink:href="#icon-tree" /></svg>
-                <h3 class="feature-title">Feature Title</h3>
-                <p class="feature-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolorem, optio reprehenderit sapiente aliquid, voluptatibus rerum dolore esse quas dolor delectus eos debitis corrupti ab.</p>
+                <svg class="icon c-green mr-ml-0 mb-1 text-xl"><use xlink:href="#icon-message" /></svg>
+                <h3 class="feature-title">Real-Time Alerts</h3>
+                <p class="feature-text">Receive real-time notifications on events such as bus arrival, student bus boarding, student reaches school, student board from school, student safe arrival at home.</p>
                 <a href="#0" class="btn btn-text">Learn More</a>
               </li>
               <li>
                 <svg class="icon c-blue mr-ml-0 mb-1 text-xl"><use xlink:href="#icon-stats-bars" /></svg>
-                <h3 class="feature-title">Feature Title</h3>
-                <p class="feature-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolorem, optio reprehenderit sapiente aliquid, voluptatibus rerum dolore esse quas dolor delectus eos debitis corrupti ab.</p>
+                <h3 class="feature-title">Advanced Reports</h3>
+                <p class="feature-text">New reports are added based on mobile application usage. Various reports can be downloaded from the site including that of school bus attendance instantly from the system.</p>
                 <a href="#0" class="btn btn-text">Learn More</a>
               </li>
               <li>
                 <svg class="icon c-orange mr-ml-0 mb-1 text-xl"><use xlink:href="#icon-location" /></svg>
-                <h3 class="feature-title">Feature Title</h3>
-                <p class="feature-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolorem, optio reprehenderit sapiente aliquid, voluptatibus rerum dolore esse quas dolor delectus eos debitis corrupti ab.</p>
+                <h3 class="feature-title">Location Tracking</h3>
+                <p class="feature-text">Our school bus tracking apps provide peace of mind to parents as they get instant notification and also allow them to monitor routes in real-time through the map feature.</p>
                 <a href="#0" class="btn btn-text">Learn More</a>
               </li>
               <li>
                 <svg class="icon c-purple mr-ml-0 mb-1 text-xl"><use xlink:href="#icon-meter" /></svg>
-                <h3 class="feature-title">Feature Title</h3>
-                <p class="feature-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolorem, optio reprehenderit sapiente aliquid, voluptatibus rerum dolore esse quas dolor delectus eos debitis corrupti ab.</p>
+                <h3 class="feature-title">Distinctive Hardware</h3>
+                <p class="feature-text">The system has distinctive hardware with the integration of both GPS and RFID system. Also, there is video surveillance with special hardware.</p>
                 <a href="#0" class="btn btn-text">Learn More</a>
               </li>
+              <li>
+                  <svg class="icon c-teal mr-ml-0 mb-1 text-xl"><use xlink:href="#icon-flag" /></svg>
+                  <h3 class="feature-title">GEO-Fencing Service</h3>
+                  <p class="feature-text">Restrict the movement of vehicle within a particular area. If a vehicle enters restricted area, an alarm system will provide warning and helps in identifying the wrong location.</p>
+                  <a href="#0" class="btn btn-text">Learn More</a>
+                </li>
+                <li>
+                  <svg class="icon c-rust mr-ml-0 mb-1 text-xl"><use xlink:href="#icon-credit-card" /></svg>
+                  <h3 class="feature-title">Cashless System</h3>
+                  <p class="feature-text">There is an online payment system for bus fares and a new mobile application for cashless sales. This feature is available for android as well as iOS platforms.</p>
+                  <a href="#0" class="btn btn-text">Learn More</a>
+                </li>
             </ul>
           </div>
           <!-- media item (full) -->
           <figure class="media-item dash-sample mb-0 pt-2 w-100 lazyload">
             <figcaption>A dashboard interface example of our amazing app</figcaption>
             <picture>
-              <source media="(min-width: 40em)" srcset="images/content/img-content-app-03-wide-LG.png" class="lazyload" alt="Examples of Watch My School Bus CRM interface.">
-              <img src="images/content/img-content-app-01-wide-LG.png" data-src="images/content/img-content-app-01-wide-LG.png" class="lazyload"
+              <source media="(min-width: 40em)" srcset="images/content/img-content-app-02-wide-LG.png" class="lazyload" alt="Examples of Watch My School Bus CRM interface.">
+              <img src="images/content/img-content-app-02-wide-LG.png" data-src="images/content/img-content-app-01-wide-LG.png" class="lazyload"
                 alt="Examples of Watch My School Bus CRM interface.">
               <noscript>
-                <img src="images/content/img-content-app-01-wide-LG.png" alt="Examples of Watch My School Bus CRM interface.">
+                <img src="images/content/img-content-app-02-wide-LG.png" alt="Examples of Watch My School Bus CRM interface.">
               </noscript>              
             </picture>
           </figure>
@@ -609,9 +571,9 @@
       </section>
 
       <!-- Services (home) -->
-      <section class="banner grid-banner services">
+      <section class="banner grid-banner services theme-yellow">
         <div class="container p-4">
-          <h2 class="align-center mb-3 pt-2 h4">Watch My School Bus Services</h2>
+          <h2 class="align-center mb-3 pt-2 pb-1">Watch My School Bus Services</h2>
           <!-- feature items -->
           <div class="grid-wrap">
             <!-- service -->
@@ -673,6 +635,53 @@
                   <a href="#" class="btn btn-round btn-outline">Read More</a>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+      <!-- CTA banner -->
+      <section id="page-start" class="banner banner-full">
+        <div class="container">
+          <!-- banner -->
+          <div class="card card-row card-clean">
+            <figure class="media-item mb-0 lazyload">
+              <picture>
+                <source media="(min-width: 40em)" data-srcset="../../images/content/img-content-subscription-services.jpg" class="lazyload" alt="Group of application interfaces.">              
+                <img src="../../images/content/img-content-subscription-services-wide.jpg" data-src="../../images/content/img-content-subscription-services-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                <noscript>
+                  <img src="../../images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
+                </noscript>
+              </picture>
+            </figure>
+            <div class="card-block">
+              <h2 id="subscription-services" class="card-title">Subscription Services</h2>
+              <p class="card-text">The hosted Software-as-a-Service (SaaS) model also allows service providers to become more agile with the ability to quickly create, bundle and implement new offerings with minimal CapEx investments.</p>
+              <a href="../../subscription-services.html" class="btn btn-lg btn-text">Find out how <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
+            </div>
+          </div>
+        </div>
+      </section>
+  
+      <!-- CTA banner -->
+      <section class="banner banner-full theme-dark-green">
+        <div class="container">
+          <!-- banner -->
+          <div class="card card-row card-row-rev card-clean">
+            <figure class="media-item mb-0 lazyload">
+              <picture>
+                <source media="(min-width: 40em)" data-srcset="../../images/content/img-content-integration-team.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
+                <img data-src="../../images/content/img-content-integration-team-wide.jpg" class="lazyload" alt="Integration Team sitting in the office.">
+                <noscript>
+                  <img src="../../images/content/img-content-integration-team-1x1.jpg" alt="Integration Team sitting in the office.">
+                </noscript>
+              </picture>
+            </figure>
+            <div class="card-block bg-half-globe-left">
+              <h2 id="integration-services" class="card-title">Integration Services</h2>
+              <p class="card-text">Our team has deep understanding and capability in designing solutions ground up to take advantage of cloud’s extreme elasticity and physical availability across multiple geographies.</p>
+              <a href="#" class="btn btn-lg btn-text">Meet the team <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
             </div>
           </div>
         </div>
